--- a/source/archupdate.qrc
+++ b/source/archupdate.qrc
@@ -1,9 +1,9 @@
 <RCC>
     <qresource prefix="/">
-        <file>icons/arch-unknown-symbolic.svg</file>
-        <file>icons/arch-uptodate-symbolic.svg</file>
-        <file>icons/arch-lit-symbolic.svg</file>
-        <file>icons/arch-error-symbolic.svg</file>
-        <file>icons/arch-updates-symbolic.svg</file>
+        <file alias="unknown">icons/arch-unknown-symbolic.svg</file>
+        <file alias="uptodate">icons/arch-uptodate-symbolic.svg</file>
+        <file alias="lit">icons/arch-lit-symbolic.svg</file>
+        <file alias="error">icons/arch-error-symbolic.svg</file>
+        <file alias="updates">icons/arch-updates-symbolic.svg</file>
     </qresource>
 </RCC>
